Sorted out merge. Think its all ok now.

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -298,7 +298,7 @@ Additional simulations were also run for more complex movement models, such as, 
 
 To be able to produce guidelines for best practise we need to identify the point where the standard deviation of the percentage error falls below an acceptable value. We have chosen this benchmark to be the standard deviation less than five, in real terms this can be equated to saying that at this point if you were to same the same area multiple times approximately 95\% of the density estimates would be within $\pm10\%$ of the true density, assuming normality. 
 
-Four models, p141 (REM model), p343, p221, and p322, have been selected to demonstrate how the precision and accuracy varying with model inputs. These models have been chosen to represent 1 equation from each quadrant, however the overall trend in accuracy and precision for all models should be similar.
+Four models, p141 (REM model), p343, p221, and p322, have been selected to demonstrate how the precision and accuracy varying with model inputs. These models have been chosen to represent one equation from each quadrant, however the overall trend in accuracy and precision for all models should be similar.
 
 
 \section{Results}
@@ -418,7 +418,7 @@ The density of the population also affects the precision of the estimates with t
 
 We have developed a number of models that can be used to estimate density from acoustic and optical sensors. This has entailed a generalisation of the gas model and the model in \cite{rowcliffe2008estimating} to be applicable to any combination of sensor width and call directionality. 
 
-We have used simulations to show, as a proof of principle, that these models are accurate and precise. We have broken  the ideal gas assumptions of animal movement and still retained accurate results, although precision is lowered. Finally we have given some general advise on best practice, although this is given based on similar assumptions those used in the derivation in the models.
+We have used simulations to show, as a proof of principle, that these models are accurate and precise. %We have broken  the ideal gas assumptions of animal movement and still retained accurate results, although precision is lowered. Finally we have given some general advise on best practice, although this is given based on similar assumptions those used in the derivation in the models.
 
 These model are therefore available to for the estimation of density of a number of taxa of importance to conservation, zoonotic diseases and ecosystem services. The models are suitable for certain groups for which there are currently no, or few, effective methods for density estimation. 
 
